# jira-sup

./: .dockerignore  .env.example  .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/chatmodes/: jira-pm.chatmode.md
.github/skills/jira-agent/: SKILL.md
.github/skills/jira-agent-connect/: SKILL.md
.github/skills/jira-agent-connect/scripts/: check-server.sh
how to use agent/: README.md
jira_mcp/: __init__.py  __main__.py  adf.py  client.py  server.py  tools.py
tests/: test_adf.py  test_server.py
