[project]
name = "jira-mcp"
version = "0.1.0"
description = "MCP server exposing Jira Cloud actions for VS Code Copilot Chat (PM workflows)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
jira-mcp = "jira_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jira_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
